--- a/Python/Day3_Quize.ipynb
+++ b/Python/Day3_Quize.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -67,11 +67,57 @@
    ],
    "source": [
     "# 1번\n",
-    "a = list(range(1,5001))\n",
+    "totalNum = list(range(1,5001))\n",
+    "nonSelf = []\n",
+    "total = 0\n",
+    "\n",
+    "# 자릿수에 따라 분리하여 셀프넘버가 아닌 것을 구하기\n",
+    "for i in totalNum:\n",
+    "    L = len(str(i))\n",
+    "    if L == 1:\n",
+    "        nonSelf = nonSelf + [i+i]        \n",
+    "    elif L == 2:\n",
+    "        ii = str(i)\n",
+    "        nonSelf = nonSelf +[int(ii[0]) + int(ii[1]) + i]\n",
+    "    elif L == 3:\n",
+    "        ii = str(i)\n",
+    "        nonSelf = nonSelf +[int(ii[0]) + int(ii[1]) + int(ii[2]) + i]\n",
+    "    else:\n",
+    "        ii = str(i)\n",
+    "        nonSelf = nonSelf +[int(ii[0]) + int(ii[1]) + int(ii[2]) + int(ii[3]) + i]\n",
+    "\n",
+    "\n",
+    "s1 = set(totalNum)\n",
+    "s2 = set(nonSelf)\n",
+    "Self = list(s1-s2) # s1와 s2의 차집합통해 셀프넘버 구하기\n",
+    "\n",
+    "\n",
+    "for i in Self:\n",
+    "    total = total + i\n",
+    "\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1227365\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번\n",
+    "# a = list(range(1,5001))\n",
     "D = []\n",
     "total = 0\n",
     "\n",
-    "for i in a:\n",
+    "for i in range(1,5001):\n",
     "    l = len(str(i))\n",
     "    if l == 1:\n",
     "        D = D + [i+i]        \n",
@@ -86,14 +132,36 @@
     "        D = D +[int(ii[0]) + int(ii[1]) + int(ii[2]) + int(ii[3]) + i]\n",
     "\n",
     "\n",
-    "s1 = set(a)\n",
+    "s1 = set(range(1,5001))\n",
     "s2 = set(D)\n",
     "DD = list(s1-s2)\n",
-    "DD.sort()\n",
+    "\n",
     "\n",
     "for i in DD:\n",
     "    total = total + i\n",
     "\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storage = set()\n",
+    "total = 0\n",
+    "\n",
+    "for i in range(1,5001) :\n",
+    "    b = 0\n",
+    "    for j in str(i) :  # 124이면 1,2,4가 들어감\n",
+    "        b += int(j)\n",
+    "    storage.add(b+i)\n",
+    "\n",
+    "for i in range(1,5001) :\n",
+    "    if i not in storage: # 전체수와 셀프넘버아닌 것 비교\n",
+    "        total += i\n",
+    "        \n",
     "print(total)"
    ]
   },
@@ -131,11 +199,11 @@
     "# cupon = input('쿠폰 이름 : ')\n",
     "\n",
     "price, cupon = input().split(' ')\n",
+    "\n",
     "price = int(price)\n",
-    "\n",
     "discount = int(cupon[4:len(cupon)])\n",
-    "total = price - discount\n",
     "\n",
+    "total = price - discount\n",
     "print(total)\n"
    ]
   },
@@ -212,6 +280,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n",
+      "-10\n",
+      "32\n",
+      "-15\n",
+      "76\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = -32, 75, 97, -10, 9, 32, 4, -15, 0, 76, 14, 2\n",
+    "for i in range(len(n)):\n",
+    "    if i%2 != 0:\n",
+    "        print(n[i])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -223,23 +316,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1, 2, 3, 4, 5}"
+       "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = [1, 1, 1, 2, 2, 3, 3, 3, 4, 4, 5]\n",
-    "set(a)"
+    "list(set(a))"
    ]
   }
  ],
