--- a/Python/Day4_Practice.ipynb
+++ b/Python/Day4_Practice.ipynb
@@ -96,6 +96,8 @@
     }
    ],
    "source": [
+    "# 피라미드 만들기\n",
+    "\n",
     "k = 1 # 1,3,5,7,9....개수로 나와야해서 여기서 계속 2 더해주는 방법으로\n",
     "\n",
     "n = 4 # 행\n",
@@ -107,10 +109,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "  *\n",
+      " ***\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 줄 수\n",
+    "n = int(input())\n",
+    "m = 2*n-1\n",
+    "for i in range(0,n):\n",
+    "    k = 2*i + 1\n",
+    "    print(str(' '*((m//2)-i)) + str('*'*k))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. 1차원의 점들이 주어졌을 때, 그 중 가장 거리가 짧은 것의 쌍을 출력하는 함수를 작성하시오. (단 점들의 배열은 모두 정렬되어있다고 가정한다.)\n",
+    "# Question 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1차원의 점들이 주어졌을 때, 그 중 가장 거리가 짧은 것의 쌍을 출력하는 함수를 작성하시오. (단 점들의 배열은 모두 정렬되어있다고 가정한다.)\n",
+    "\n",
     "예를들어 S={1, 3, 4, 8, 13, 17, 20} 이 주어졌다면, 결과값은 (3, 4)가 될 것이다."
    ]
   },
@@ -152,27 +187,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. 주어진 문자열(공백 없이 쉼표로 구분되어 있음)을 가지고 아래 문제에 대한 프로그램을 작성하세요.\n",
+    "# Question 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "주어진 문자열(공백 없이 쉼표로 구분되어 있음)을 가지고 아래 문제에 대한 프로그램을 작성하세요.\n",
+    "\n",
     "data=\"이유덕,이재영,권종표,이재영,박민호,강상희,이재영,김지완,최승혁,이성연,박영서,박민호,전경헌,송정환,김재성,이유덕,전경헌\"\n",
     "\n",
-    "김씨와 이씨는 각각 몇 명 인가요?\n",
-    "\"이재영\"이란 이름이 몇 번 반복되나요?\n",
-    "중복을 제거한 이름을 출력하세요.\n",
-    "중복을 제거한 이름을 오름차순으로 정렬하여 출력하세요.\n",
+    "- 김씨와 이씨는 각각 몇 명 인가요?\n",
+    "- \"이재영\"이란 이름이 몇 번 반복되나요?\n",
+    "- 중복을 제거한 이름을 출력하세요.\n",
+    "- 중복을 제거한 이름을 오름차순으로 정렬하여 출력하세요.\n",
     "\n",
     "names = \"이유덕,이재영,권종표,이재영,박민호,강상희,이재영,김지완,최승혁,이성연,박영서,박민호,전경헌,송정환,김재성,이유덕,전경헌\".split(\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 6\n"
+      "2 6\n",
+      "김씨 2명, 이씨 6명\n"
      ]
     }
    ],
@@ -188,20 +232,21 @@
     "    elif names[i][0] == '이':\n",
     "        Lee += 1\n",
     "    \n",
-    "print(Kim,Lee)\n"
+    "print(Kim,Lee)\n",
+    "print('김씨 %d명, 이씨 %d명'%(Kim,Lee))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "['김지완', '이성연', '권종표', '박민호', '전경헌', '이재영', '최승혁', '송정환', '김재성', '이유덕', '박영서', '강상희']\n",
+      "이재영이란 이름은 3번 반복됩니다.\n",
+      "['김재성', '박영서', '강상희', '권종표', '최승혁', '이성연', '전경헌', '박민호', '이유덕', '이재영', '송정환', '김지완']\n",
       "['강상희', '권종표', '김재성', '김지완', '박민호', '박영서', '송정환', '이성연', '이유덕', '이재영', '전경헌', '최승혁']\n"
      ]
     }
@@ -211,11 +256,14 @@
     "for i in range(L):\n",
     "    if names[i] == '이재영':\n",
     "        count += 1\n",
-    "print(count)\n",
+    "print('이재영이란 이름은 %d번 반복됩니다.' %count)\n",
+    "# print(names.count('이재영'))\n",
     "\n",
+    "# 중복 제거한 이름 \n",
     "Names = list(set(names))\n",
     "print(Names)\n",
     "\n",
+    "#이름 오름차순\n",
     "Names.sort()\n",
     "print(Names)\n",
     "# print(list(set(names)).sort())"
@@ -225,44 +273,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. 10미만의 자연수에서 3과 5의 배수를 구하면 3,5,6,9이다. 이들의 총합은 23이다.\n",
-    "1000미만의 자연수에서 3,5의 배수의 총합을 구하라."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "233168"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 3으로 나누었을때, 5로 나누었을때 0이면 그 배수, 저장 후 공배수 제거를 위해 set하기\n",
-    "total = []\n",
-    "for i in range(1,1000):\n",
-    "    if i%3 == 0:\n",
-    "        total += [i]\n",
-    "    elif i%5 == 0:\n",
-    "        total += [i]\n",
-    "\n",
-    "total = list(set(total))\n",
-    "sum(total)"
+    "# Question 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. 자기 자신을 제외한 모든 양의 약수들의 합이 자기 자신이 되는 자연수를 완전수라고 한다. 예를 들면, 6과 28은 완전수이다. 6=1+2+3 // 1,2,3은 각각 6의 약수 28=1+2+4+7+14 // 1,2,4,7,14는 각각 28의 약수\n",
+    "10미만의 자연수에서 3과 5의 배수를 구하면 3,5,6,9이다. 이들의 총합은 23이다.\n",
+    "\n",
+    "1000미만의 자연수에서 3,5의 배수의 총합을 구하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "233168\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3으로 나누었을때, 5로 나누었을때 0이면 그 배수, 저장 후 공배수 제거를 위해 set하기\n",
+    "total = 0\n",
+    "for i in range(1,1000):\n",
+    "    if i%3 == 0 or i%5 == 0:\n",
+    "        total += i\n",
+    "#     elif i%5 == 0:\n",
+    "#         total += i\n",
+    "\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "자기 자신을 제외한 모든 양의 약수들의 합이 자기 자신이 되는 자연수를 완전수라고 한다. \n",
+    "\n",
+    "예를 들면, 6과 28은 완전수이다. 6=1+2+3 // 1,2,3은 각각 6의 약수 28=1+2+4+7+14 // 1,2,4,7,14는 각각 28의 약수\n",
+    "\n",
     "입력으로 자연수 N을 받고, 출력으로 N 이하의 모든 완전수를 출력하는 코드를 작성하라."
    ]
   },
@@ -295,9 +357,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. 0~9까지의 문자로 된 숫자를 입력 받았을 때, 이 입력 값이 0~9까지의 숫자가 각각 한 번 씩만 사용된 것인지 확인하는 함수를 구하시오.\n",
+    "# Question 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0 ~ 9까지의 문자로 된 숫자를 입력 받았을 때, 이 입력 값이 0~9까지의 숫자가 각각 한 번 씩만 사용된 것인지 확인하는 함수를 구하시오.\n",
     "\n",
     "sample inputs: 0123456789 01234 01234567890 6789012345 012322456789\n",
+    "\n",
     "sample outputs: true false false true false"
    ]
   },
@@ -335,16 +405,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Question 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "run length 압축알고리즘 문제( .bmp)\n",
-    "6. 문자열을 입력받아서, 같은 문자가 연속적으로 반복되는 경우에 그 반복 횟수를 표시하여 문자열을 압축하기.\n",
+    "\n",
+    "문자열을 입력받아서, 같은 문자가 연속적으로 반복되는 경우에 그 반복 횟수를 표시하여 문자열을 압축하기.\n",
     "\n",
     "입력 예시: aaabbcccccca\n",
+    "\n",
     "출력 예시: a3b2c6a1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +431,7 @@
      "output_type": "stream",
      "text": [
       "aaabbcccccca\n",
-      "a3b2c6a1\n"
+      "a3b2c6a1"
      ]
     }
    ],
@@ -364,25 +443,25 @@
     "a = input()\n",
     "\n",
     "L = len(a)\n",
-    "c = []\n",
-    "num = []\n",
     "count = 1\n",
     "\n",
     "for i in range(1,L):\n",
     "    if a[i-1] == a[i]:\n",
     "        count += 1\n",
     "    else:\n",
-    "        print(a[i-1],end='')\n",
-    "        print(count,end='')\n",
+    "#         print(a[i-1],end='')\n",
+    "#         print(count,end='')\n",
+    "        print(a[i-1],count,sep='',end='') # sep : ''에 있는것이 결과값 사이사이 들어가서 나옴,  end : ''사이에 있는 것이 print 사이에 넣어서 나옴\n",
     "        if i == L-1:\n",
-    "            print(a[i],end='')\n",
-    "            print(1)\n",
+    "#             print(a[i],end='')\n",
+    "#             print(1)\n",
+    "            print(a[i],1,sep='',end='')\n",
     "        count = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
